# cs-wsmt1m-individual

./: Cargo.toml  README.md  diesel.toml
migrations/2025-03-05-123742_create_counter/: down.sql  up.sql
migrations/2025-03-05-123742_create_table/: up.sql
next-frontend/: package-lock.json  package.json
next-frontend/src/app/: page.tsx
next-frontend/src/components/: AddTodo.tsx  TodoItem.tsx  TodoList.tsx  TodoSkeleton.tsx
next-frontend/src/components/icons/: TrashIcon.tsx
next-frontend/src/lib/: api.ts
next-frontend/src/types/: todo.ts
rust-backend/: Cargo.toml  docker-compose.yml
rust-backend/src/: app_config.rs  app_state.rs  main.rs
rust-backend/src/database/: mod.rs  models.rs
rust-backend/src/handlers/todo/: create.rs  list.rs  mod.rs  update.rs
rust-backend/src/services/: todo_service.rs
rust-backend/src/utils/: errors.rs
rust-backend/src/utils/middleware/: log_middleware.rs
src/: app_state.rs  main.rs
src/database/: mod.rs  models.rs  schema.rs
src/handlers/todo/: create.rs  delete.rs  list.rs  update.rs
src/utils/: mod.rs  mysql_pool.rs
