[package]
name = "individual-project-laurcons"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
chrono = "0.4.40"
serde = { version = "1.0.218", features = ["derive"] }
axum-valid = { version = "0.23.0", features = ["into_json", "422"] }
validator = { version = "0.20.0", features = ["derive"] }
